Code editor: fix room wizard exit and climb generation, add set_terrain, and wizard overflows

--- a/src/css/code.editor.scss
+++ b/src/css/code.editor.scss
@@ -1080,7 +1080,6 @@ input[type=checkbox].property-grid-editor {
     width: 100%;
     text-align: left;
     font-size: 12pt;
-    overflow: auto;
 }
 
 .wizard-page .bootstrap-select.form-control {
